# pib-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  flake.nix  plan.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: container-publish.yml
src/pib_backend/: __init__.py  api.py  config.py  errors.py  logging_config.py  main.py  models.py  service.py  storage.py
tests/: test_api.py  test_storage.py
